--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -60,7 +60,7 @@
     "services": "Services",
     "support": "Support",
     "legal": "Legal",
-    "copyright": "© 2025 UrusMerek.id. All rights reserved.",
+    "copyright": "© 2025 urusmerek.id. All rights reserved.",
     "privacy_policy": "Privacy Policy",
     "terms_of_service": "Terms of Service"
   },
