--- a/public/locales/en/faq.json
+++ b/public/locales/en/faq.json
@@ -1,6 +1,6 @@
 {
   "meta": {
-    "title": "FAQ - Frequently Asked Questions | UrusMerek.id",
+    "title": "FAQ - Frequently Asked Questions | urusmerek.id",
     "description": "Find answers to common questions about trademark registration, renewal, and other IP services."
   },
   "title": "Frequently Asked Questions",
