--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -1,6 +1,6 @@
 {
   "meta": {
-    "title": "UrusMerek.id - Hassle-Free Trademark Registration, Protected in 1 Day",
+    "title": "urusmerek.id - Hassle-Free Trademark Registration, Protected in 1 Day",
     "description": "Complete platform for trademark registration, renewal, and IP consultation. Easy, fast, and trusted process. Protect your brand now!"
   },
   "hero": {
