--- a/public/locales/en/mitra.json
+++ b/public/locales/en/mitra.json
@@ -1,6 +1,6 @@
 {
   "meta": {
-    "title": "UrusMerek Mitra Program - UrusMerek.id",
+    "title": "UrusMerek Mitra Program - urusmerek.id",
     "description": "Join UrusMerek's Mitra program and earn IDR 100,000 commission for each verified sale."
   },
   "hero_title": "UrusMerek Mitra Program",
