--- a/public/locales/en/services.json
+++ b/public/locales/en/services.json
@@ -1,35 +1,35 @@
 {
   "meta": {
     "pendaftaran_merek": {
-      "title": "Trademark Registration - UrusMerek.id",
+      "title": "Trademark Registration - urusmerek.id",
       "description": "Official trademark registration service with fast and easy process. Protect your brand identity now!"
     },
     "perpanjangan_merek": {
-      "title": "Trademark Renewal - UrusMerek.id",
+      "title": "Trademark Renewal - urusmerek.id",
       "description": "Renew your trademark validity on time. Don't let your trademark protection expire!"
     },
     "cetak_sertifikat": {
-      "title": "Certificate Printing - UrusMerek.id",
+      "title": "Certificate Printing - urusmerek.id",
       "description": "Reprint your lost or damaged trademark certificate with an easy process."
     },
     "perubahan_nama": {
-      "title": "Name Amendment - UrusMerek.id",
+      "title": "Name Amendment - urusmerek.id",
       "description": "Change the name or data of your registered trademark according to business needs."
     },
     "pengalihan_hak": {
-      "title": "Rights Transfer - UrusMerek.id",
+      "title": "Rights Transfer - urusmerek.id",
       "description": "Legal process to transfer trademark ownership from one party to another."
     },
     "usul_tolak": {
-      "title": "Rejection Proposal - UrusMerek.id",
+      "title": "Rejection Proposal - urusmerek.id",
       "description": "Reject trademark applications similar to yours with strong legal arguments."
     },
     "surat_keberatan": {
-      "title": "Objection Letter - UrusMerek.id",
+      "title": "Objection Letter - urusmerek.id",
       "description": "File an objection to your trademark registration rejection with expert consultant help."
     },
     "perjanjian_lisensi": {
-      "title": "License Agreement - UrusMerek.id",
+      "title": "License Agreement - urusmerek.id",
       "description": "Create a valid trademark license agreement that protects your rights."
     }
   },
