--- a/public/locales/id/common.json
+++ b/public/locales/id/common.json
@@ -60,7 +60,7 @@
     "services": "Layanan",
     "support": "Dukungan",
     "legal": "Legal",
-    "copyright": "© 2025 UrusMerek.id. Hak cipta dilindungi.",
+    "copyright": "© 2025 urusmerek.id. Hak cipta dilindungi.",
     "privacy_policy": "Kebijakan Privasi",
     "terms_of_service": "Syarat & Ketentuan"
   },
