--- a/public/locales/id/faq.json
+++ b/public/locales/id/faq.json
@@ -1,6 +1,6 @@
 {
   "meta": {
-    "title": "FAQ - Pertanyaan yang Sering Diajukan | UrusMerek.id",
+    "title": "FAQ - Pertanyaan yang Sering Diajukan | urusmerek.id",
     "description": "Temukan jawaban untuk pertanyaan umum seputar pendaftaran merek, perpanjangan, dan layanan HKI lainnya."
   },
   "title": "Pertanyaan yang Sering Diajukan",
