--- a/public/locales/id/home.json
+++ b/public/locales/id/home.json
@@ -1,6 +1,6 @@
 {
   "meta": {
-    "title": "UrusMerek.id - Daftar Merek Tanpa Drama, 1 Hari Langsung Terlindungi",
+    "title": "urusmerek.id - Daftar Merek Tanpa Drama, 1 Hari Langsung Terlindungi",
     "description": "Platform lengkap untuk pendaftaran merek, perpanjangan, dan konsultasi HKI. Proses mudah, cepat, dan terpercaya. Lindungi brand Anda sekarang!"
   },
   "hero": {
