--- a/public/locales/id/mitra.json
+++ b/public/locales/id/mitra.json
@@ -1,6 +1,6 @@
 {
   "meta": {
-    "title": "Program Mitra UrusMerek - UrusMerek.id",
+    "title": "Program Mitra UrusMerek - urusmerek.id",
     "description": "Bergabunglah dengan Program Mitra UrusMerek dan dapatkan komisi Rp100.000 untuk setiap penjualan terverifikasi."
   },
   "hero_title": "Program Mitra UrusMerek",
