--- a/public/locales/id/services.json
+++ b/public/locales/id/services.json
@@ -1,35 +1,35 @@
 {
   "meta": {
     "pendaftaran_merek": {
-      "title": "Pendaftaran Merek - UrusMerek.id",
+      "title": "Pendaftaran Merek - urusmerek.id",
       "description": "Layanan pendaftaran merek resmi dengan proses cepat dan mudah. Lindungi identitas brand Anda sekarang!"
     },
     "perpanjangan_merek": {
-      "title": "Perpanjangan Merek - UrusMerek.id",
+      "title": "Perpanjangan Merek - urusmerek.id",
       "description": "Perpanjang masa berlaku merek Anda tepat waktu. Jangan biarkan perlindungan merek berakhir!"
     },
     "cetak_sertifikat": {
-      "title": "Cetak Sertifikat Merek - UrusMerek.id",
+      "title": "Cetak Sertifikat Merek - urusmerek.id",
       "description": "Cetak ulang sertifikat merek Anda yang hilang atau rusak dengan proses yang mudah."
     },
     "perubahan_nama": {
-      "title": "Perubahan Nama Merek - UrusMerek.id",
+      "title": "Perubahan Nama Merek - urusmerek.id",
       "description": "Ubah nama atau data merek terdaftar Anda sesuai kebutuhan bisnis."
     },
     "pengalihan_hak": {
-      "title": "Pengalihan Hak Merek - UrusMerek.id",
+      "title": "Pengalihan Hak Merek - urusmerek.id",
       "description": "Proses legal untuk memindahkan kepemilikan merek dari satu pihak ke pihak lain."
     },
     "usul_tolak": {
-      "title": "Usul Tolak Merek - UrusMerek.id",
+      "title": "Usul Tolak Merek - urusmerek.id",
       "description": "Tolak pendaftaran merek yang menyerupai merek Anda dengan argumentasi hukum yang kuat."
     },
     "surat_keberatan": {
-      "title": "Surat Keberatan - UrusMerek.id",
+      "title": "Surat Keberatan - urusmerek.id",
       "description": "Ajukan keberatan atas penolakan pendaftaran merek Anda dengan bantuan konsultan ahli."
     },
     "perjanjian_lisensi": {
-      "title": "Perjanjian Lisensi Merek - UrusMerek.id",
+      "title": "Perjanjian Lisensi Merek - urusmerek.id",
       "description": "Buat perjanjian lisensi merek yang sah dan melindungi hak Anda."
     }
   },
