--- a/public/locales/en/faq.json
+++ b/public/locales/en/faq.json
@@ -52,7 +52,7 @@
       "answer": "No. Trademark registration in Indonesia is only valid within Indonesian territory. For protection in other countries, you must register in those countries or through the Madrid Protocol system for international registration."
     },
     {
-      "question": "How do I join the UrusMerek Mitra program?",
+      "question": "How do I join the urusmerek Mitra program?",
       "answer": "Register through our Mitra page and earn IDR 100,000 commission for each verified sale. We provide referral links, promotional materials, and full support for Mitra members."
     }
   ]
