--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -70,7 +70,7 @@
     "title": "Trusted by Thousands of Business Owners",
     "items": [
       {
-        "quote": "The trademark registration process became very easy. The UrusMerek team is very responsive and professional!",
+        "quote": "The trademark registration process became very easy. The urusmerek team is very responsive and professional!",
         "author": "Budi Santoso",
         "role": "Founder, Kopi Nusantara",
         "company": "Kopi Nusantara"
