--- a/public/locales/en/mitra.json
+++ b/public/locales/en/mitra.json
@@ -1,13 +1,13 @@
 {
   "meta": {
-    "title": "UrusMerek Mitra Program - urusmerek.id",
-    "description": "Join UrusMerek's Mitra program and earn IDR 100,000 commission for each verified sale."
+    "title": "urusmerek Mitra Program - urusmerek.id",
+    "description": "Join urusmerek's Mitra program and earn IDR 100,000 commission for each verified sale."
   },
-  "hero_title": "UrusMerek Mitra Program",
+  "hero_title": "urusmerek Mitra Program",
   "hero_subtitle": "Earn additional income by recommending our trusted trademark registration services",
   "commission_highlight": "IDR 100,000 Commission/Verified Sale",
   "program_title": "About Partner Program",
-  "program_desc": "UrusMerek's Mitra program is designed to help you earn additional income by recommending our trademark registration services to your contacts, clients, or audience. Every time someone registers through your referral link and makes a purchase, you will earn a commission.",
+  "program_desc": "urusmerek's Mitra program is designed to help you earn additional income by recommending our trademark registration services to your contacts, clients, or audience. Every time someone registers through your referral link and makes a purchase, you will earn a commission.",
   "benefits_title": "Benefits of Becoming a Partner",
   "benefits": [
     {
