--- a/public/locales/id/faq.json
+++ b/public/locales/id/faq.json
@@ -52,7 +52,7 @@
       "answer": "Tidak. Pendaftaran merek di Indonesia hanya berlaku di wilayah Indonesia. Jika ingin perlindungan di negara lain, Anda harus mendaftar di negara tersebut atau melalui sistem Madrid Protocol untuk pendaftaran internasional."
     },
     {
-      "question": "Bagaimana cara menjadi mitra afiliasi UrusMerek?",
+      "question": "Bagaimana cara menjadi mitra afiliasi urusmerek?",
       "answer": "Anda bisa mendaftar sebagai mitra afiliasi melalui halaman Mitra kami. Dapatkan komisi Rp100.000 untuk setiap penjualan yang terverifikasi. Kami menyediakan link referral, materi promosi, dan dukungan penuh untuk mitra."
     }
   ]
