--- a/public/locales/id/home.json
+++ b/public/locales/id/home.json
@@ -70,7 +70,7 @@
     "title": "Dipercaya oleh Ribuan Pemilik Bisnis",
     "items": [
       {
-        "quote": "Proses pendaftaran merek jadi sangat mudah. Tim UrusMerek sangat responsif dan profesional!",
+        "quote": "Proses pendaftaran merek jadi sangat mudah. Tim urusmerek sangat responsif dan profesional!",
         "author": "Budi Santoso",
         "role": "Founder, Kopi Nusantara",
         "company": "Kopi Nusantara"
