fix admin poanel and mitra

--- a/src/lib/i18n/locales/id.json
+++ b/src/lib/i18n/locales/id.json
@@ -1027,6 +1027,7 @@
       "navigation": {
         "dashboard": "Dashboard",
         "partners": "Mitra",
+        "referrals": "Referral",
         "consultations": "Konsultasi",
         "withdraw": "Withdraw",
         "commissionSettings": "Pengaturan Komisi",
